# opencv_playground

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  line_detector.hpp  main.cpp
